pipTestCopy/pip_output_log/pip_output_log.9060558.txt
Collecting fontTools==4.18.2 (from -r D:/Windsor/WindsorThesis/Git repo/Thesis-Project-Python-Dependency-Conflict-Resolution/Dataset/gist/main_gist\requirements.9060558.txt (line 1))
  Obtaining dependency information for fontTools==4.18.2 from https://files.pythonhosted.org/packages/ca/ed/face3cb6b4b53fa2f4976daf3665b829ca9680cb1d09b2d18461d35cf382/fonttools-4.18.2-py3-none-any.whl.metadata
  Downloading fonttools-4.18.2-py3-none-any.whl.metadata (101 kB)
     ------------------------------------ 101.8/101.8 kB 649.3 kB/s eta 0:00:00
Collecting mojo==0.1 (from -r D:/Windsor/WindsorThesis/Git repo/Thesis-Project-Python-Dependency-Conflict-Resolution/Dataset/gist/main_gist\requirements.9060558.txt (line 2))
  Obtaining dependency information for mojo==0.1 from https://files.pythonhosted.org/packages/d7/e0/388f4f4dfa467ae33ad0d4ff2d364580ded3041dc7c24c45af092a41feb7/mojo-0.1-py3-none-any.whl.metadata
  Downloading mojo-0.1-py3-none-any.whl.metadata (10 kB)
Collecting robofab==1.2.1 (from -r D:/Windsor/WindsorThesis/Git repo/Thesis-Project-Python-Dependency-Conflict-Resolution/Dataset/gist/main_gist\requirements.9060558.txt (line 3))
  Downloading robofab-1.2.1.tar.gz (148 kB)
     -------------------------------------- 148.5/148.5 kB 4.5 MB/s eta 0:00:00
  Installing build dependencies: started
  Installing build dependencies: finished with status 'done'
  Getting requirements to build wheel: started
  Getting requirements to build wheel: finished with status 'error'
  error: subprocess-exited-with-error
  
  Getting requirements to build wheel did not run successfully.
  exit code: 1
  
  [22 lines of output]
  Traceback (most recent call last):
    File "D:\Windsor\WindsorThesis\Git repo\Thesis-Project-Python-Dependency-Conflict-Resolution\pipTest\myenv\Lib\site-packages\pip\_vendor\pyproject_hooks\_in_process\_in_process.py", line 353, in <module>
      main()
    File "D:\Windsor\WindsorThesis\Git repo\Thesis-Project-Python-Dependency-Conflict-Resolution\pipTest\myenv\Lib\site-packages\pip\_vendor\pyproject_hooks\_in_process\_in_process.py", line 335, in main
      json_out['return_val'] = hook(**hook_input['kwargs'])
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    File "D:\Windsor\WindsorThesis\Git repo\Thesis-Project-Python-Dependency-Conflict-Resolution\pipTest\myenv\Lib\site-packages\pip\_vendor\pyproject_hooks\_in_process\_in_process.py", line 118, in get_requires_for_build_wheel
      return hook(config_settings)
             ^^^^^^^^^^^^^^^^^^^^^
    File "C:\Users\ASUS\AppData\Local\Temp\pip-build-env-zvldxvsx\overlay\Lib\site-packages\setuptools\build_meta.py", line 327, in get_requires_for_build_wheel
      return self._get_build_requires(config_settings, requirements=[])
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    File "C:\Users\ASUS\AppData\Local\Temp\pip-build-env-zvldxvsx\overlay\Lib\site-packages\setuptools\build_meta.py", line 297, in _get_build_requires
      self.run_setup()
    File "C:\Users\ASUS\AppData\Local\Temp\pip-build-env-zvldxvsx\overlay\Lib\site-packages\setuptools\build_meta.py", line 497, in run_setup
      super().run_setup(setup_script=setup_script)
    File "C:\Users\ASUS\AppData\Local\Temp\pip-build-env-zvldxvsx\overlay\Lib\site-packages\setuptools\build_meta.py", line 313, in run_setup
      exec(code, locals())
    File "<string>", line 15
      print "*** Warning: FontTools needs the numpy library for some operations, see:"
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
error: subprocess-exited-with-error

Getting requirements to build wheel did not run successfully.
exit code: 1

See above for output.

note: This error originates from a subprocess, and is likely not a problem with pip.

[notice] A new release of pip is available: 23.2.1 -> 24.1.2
[notice] To update, run: D:\Windsor\WindsorThesis\Git repo\Thesis-Project-Python-Dependency-Conflict-Resolution\pipTest\myenv\Scripts\python.exe -m pip install --upgrade pip
